test/sema/negative/struct08.impala
struct S[X] { x: X }

fn main() -> () {
   let s: S[bool] = S[int] { x: 5 };
}
